--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: rgb(255, 255, 255) !important;
+  font-family: "Roboto", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+h2 {
+  color: black;
+  font-weight: 400;
+  font-size: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p {
+  font-weight: 400;
+  font-size: 1rem;
+  color: rgba(0, 0, 0, 0.772);
+
+  line-height: 35px;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:hover {
+  color: unset;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+section,
+footer {
+  padding: 40px 0px;
+}
+
+.zindex{
+  position: relative;
+  z-index: 66666666 !important;
+}
+/* =========== custom scroll-bar ========= */
+
+::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+  background: rgb(183, 183, 183);
+
+}
+
+table::-webkit-scrollbar{
+  height: 0 !important;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2em;
+  background: #12053f;
+  overflow-y: auto
+  /* background: linear-gradient(-45deg, #e250e5, #4b50e6, #e250e5, #4b50e6); */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #2c0ca0; 
 }
